[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/ToolPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/toolPanel/swap.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/toolPanel/bw.png" type="Texture" id=3]
[ext_resource path="res://scripts/PalettePanel.gd" type="Script" id=4]
[ext_resource path="res://assets/graphics/Palette/add.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/Palette/addPressed.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/Palette/remove.png" type="Texture" id=7]
[ext_resource path="res://assets/graphics/Palette/removePressed.png" type="Texture" id=8]
[ext_resource path="res://assets/graphics/Palette/settings.png" type="Texture" id=9]
[ext_resource path="res://assets/graphics/Palette/settingsPressed.png" type="Texture" id=10]
[ext_resource path="res://assets/graphics/toolPanel/selected.png" type="Texture" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 16, 16 )

[node name="Lattice" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuPanel" type="PanelContainer" parent="UI"]
editor/display_folded = true
margin_right = 1024.0
margin_bottom = 34.0

[node name="Menu" type="HBoxContainer" parent="UI/MenuPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0

[node name="FileMenu" type="MenuButton" parent="UI/MenuPanel/Menu"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"

[node name="EditMenu" type="MenuButton" parent="UI/MenuPanel/Menu"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 20.0
text = "Edit"

[node name="ViewMenu" type="MenuButton" parent="UI/MenuPanel/Menu"]
margin_left = 79.0
margin_right = 121.0
margin_bottom = 20.0
text = "View"

[node name="HelpMenu" type="MenuButton" parent="UI/MenuPanel/Menu"]
margin_left = 125.0
margin_right = 167.0
margin_bottom = 20.0
text = "Help"

[node name="MainPanel" type="PanelContainer" parent="UI"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 568.0
size_flags_vertical = 3

[node name="Main" type="HBoxContainer" parent="UI/MainPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 523.0

[node name="ToolPanel" type="PanelContainer" parent="UI/MainPanel/Main"]
margin_right = 80.0
margin_bottom = 516.0
script = ExtResource( 1 )

[node name="Tools" type="VBoxContainer" parent="UI/MainPanel/Main/ToolPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 73.0
margin_bottom = 509.0

[node name="Label" type="Label" parent="UI/MainPanel/Main/ToolPanel/Tools"]
margin_right = 66.0
margin_bottom = 14.0
text = "Tool Panel"

[node name="HSeparator" type="HSeparator" parent="UI/MainPanel/Main/ToolPanel/Tools"]
margin_top = 18.0
margin_right = 66.0
margin_bottom = 22.0

[node name="FGBG" type="HBoxContainer" parent="UI/MainPanel/Main/ToolPanel/Tools"]
margin_top = 26.0
margin_right = 66.0
margin_bottom = 46.0

[node name="Foreground" type="ColorPickerButton" parent="UI/MainPanel/Main/ToolPanel/Tools/FGBG"]
margin_right = 25.0
margin_bottom = 20.0
rect_min_size = Vector2( 25, 20 )

[node name="Background" type="ColorPickerButton" parent="UI/MainPanel/Main/ToolPanel/Tools/FGBG"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 20.0
rect_min_size = Vector2( 25, 20 )
color = Color( 1, 1, 1, 1 )

[node name="Buttons" type="HBoxContainer" parent="UI/MainPanel/Main/ToolPanel/Tools"]
editor/display_folded = true
margin_top = 50.0
margin_right = 66.0
margin_bottom = 66.0

[node name="Swap" type="TextureButton" parent="UI/MainPanel/Main/ToolPanel/Tools/Buttons"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 2 )

[node name="BW" type="TextureButton" parent="UI/MainPanel/Main/ToolPanel/Tools/Buttons"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
texture_normal = ExtResource( 3 )

[node name="HSplitContainer" type="HSplitContainer" parent="UI/MainPanel/Main"]
margin_left = 84.0
margin_right = 1010.0
margin_bottom = 516.0
size_flags_horizontal = 3
split_offset = -150

[node name="Center" type="VBoxContainer" parent="UI/MainPanel/Main/HSplitContainer"]
margin_right = 663.0
margin_bottom = 516.0
size_flags_horizontal = 3

[node name="ToolOptionsPanel" type="PanelContainer" parent="UI/MainPanel/Main/HSplitContainer/Center"]
editor/display_folded = true
margin_right = 663.0
margin_bottom = 28.0

[node name="ToolOptions" type="HBoxContainer" parent="UI/MainPanel/Main/HSplitContainer/Center/ToolOptionsPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 656.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="UI/MainPanel/Main/HSplitContainer/Center/ToolOptionsPanel/ToolOptions"]
margin_right = 82.0
margin_bottom = 14.0
text = "Tool Options"

[node name="VSplitContainer" type="VSplitContainer" parent="UI/MainPanel/Main/HSplitContainer/Center"]
margin_top = 32.0
margin_right = 663.0
margin_bottom = 516.0
size_flags_vertical = 3
split_offset = -100

[node name="TabContainer" type="TabContainer" parent="UI/MainPanel/Main/HSplitContainer/Center/VSplitContainer"]
margin_right = 663.0
margin_bottom = 344.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true

[node name="Canvas" type="ViewportContainer" parent="UI/MainPanel/Main/HSplitContainer/Center/VSplitContainer/TabContainer"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="UI/MainPanel/Main/HSplitContainer/Center/VSplitContainer/TabContainer/Canvas"]
size = Vector2( 655, 308 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="UI/MainPanel/Main/HSplitContainer/Center/VSplitContainer/TabContainer/Canvas/Viewport"]

[node name="AnimationPanel" type="PanelContainer" parent="UI/MainPanel/Main/HSplitContainer/Center/VSplitContainer"]
editor/display_folded = true
margin_top = 356.0
margin_right = 663.0
margin_bottom = 484.0

[node name="Animation" type="HBoxContainer" parent="UI/MainPanel/Main/HSplitContainer/Center/VSplitContainer/AnimationPanel"]
editor/display_folded = true
margin_left = 7.0
margin_top = 7.0
margin_right = 656.0
margin_bottom = 121.0

[node name="Label" type="Label" parent="UI/MainPanel/Main/HSplitContainer/Center/VSplitContainer/AnimationPanel/Animation"]
margin_top = 50.0
margin_right = 66.0
margin_bottom = 64.0
text = "Animation"

[node name="RightPanel" type="PanelContainer" parent="UI/MainPanel/Main/HSplitContainer"]
margin_left = 675.0
margin_right = 926.0
margin_bottom = 516.0

[node name="VSplitContainer" type="VSplitContainer" parent="UI/MainPanel/Main/HSplitContainer/RightPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 244.0
margin_bottom = 509.0
split_offset = -300

[node name="PalettePanel" type="PanelContainer" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer"]
margin_right = 237.0
margin_bottom = 162.0
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="Palette" type="VBoxContainer" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 230.0
margin_bottom = 155.0

[node name="Label" type="Label" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette"]
margin_right = 223.0
margin_bottom = 14.0
text = "Palette"

[node name="HSeparator" type="HSeparator" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette"]
margin_top = 18.0
margin_right = 223.0
margin_bottom = 22.0

[node name="Buttons" type="HBoxContainer" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette"]
margin_top = 26.0
margin_right = 223.0
margin_bottom = 42.0

[node name="AddColor" type="TextureButton" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette/Buttons"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="RemoveColor" type="TextureButton" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette/Buttons"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="Settings" type="TextureButton" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette/Buttons"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="Colors" type="ItemList" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette"]
margin_top = 46.0
margin_right = 223.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/selected_focus = SubResource( 1 )
max_columns = 0
same_column_width = true
icon_mode = 0

[node name="LayerPanel" type="PanelContainer" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer"]
editor/display_folded = true
margin_top = 174.0
margin_right = 237.0
margin_bottom = 502.0

[node name="Label" type="Label" parent="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/LayerPanel"]
margin_left = 7.0
margin_top = 157.0
margin_right = 230.0
margin_bottom = 171.0
text = "Layer Panel"

[node name="Right" type="VBoxContainer" parent="UI/MainPanel/Main/HSplitContainer/RightPanel"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 244.0
margin_bottom = 509.0

[node name="InfoPanel" type="PanelContainer" parent="UI"]
editor/display_folded = true
margin_top = 572.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Info" type="HBoxContainer" parent="UI/InfoPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="UI/InfoPanel/Info"]
margin_right = 25.0
margin_bottom = 14.0
text = "Info"
[connection signal="pressed" from="UI/MainPanel/Main/ToolPanel/Tools/Buttons/Swap" to="UI/MainPanel/Main/ToolPanel" method="_on_Swap_pressed"]
[connection signal="pressed" from="UI/MainPanel/Main/ToolPanel/Tools/Buttons/BW" to="UI/MainPanel/Main/ToolPanel" method="_on_BW_pressed"]
[connection signal="pressed" from="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette/Buttons/AddColor" to="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel" method="_on_AddColor_pressed"]
[connection signal="pressed" from="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette/Buttons/RemoveColor" to="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel" method="_on_RemoveColor_pressed"]
[connection signal="pressed" from="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette/Buttons/Settings" to="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel" method="_on_Settings_pressed"]
[connection signal="item_selected" from="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel/Palette/Colors" to="UI/MainPanel/Main/HSplitContainer/RightPanel/VSplitContainer/PalettePanel" method="_on_Colors_item_selected"]
